--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0-rc.1"
-  },
-  "dependencies": {
-    "@astrojs/tailwind": "^0.2.5"
+    "@astrojs/svelte": "^1.0.0",
+    "@astrojs/tailwind": "^0.2.5",
+    "astro": "^1.0.1",
+    "svelte": "^3.46.4"
   }
 }
