--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/image": "^0.11.1",
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^0.2.5",
     "astro": "^1.6.3",
+    "sharp": "^0.31.1",
     "svelte": "^3.52.0"
   }
 }
