--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@example/minimal",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -9,11 +10,14 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/image": "^0.11.1",
-    "@astrojs/svelte": "^1.0.2",
-    "@astrojs/tailwind": "^0.2.5",
-    "astro": "^1.6.3",
-    "sharp": "^0.31.1",
-    "svelte": "^3.52.0"
+    "@astrojs/image": "^0.16.4",
+    "@astrojs/svelte": "^2.1.0",
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.1.9",
+    "sharp": "^0.31.3",
+    "svelte": "^3.58.0"
+  },
+  "dependencies": {
+    "tailwindcss": "^3.0.24"
   }
 }
