--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.9",
     "sharp": "^0.31.3",
-    "svelte": "^3.58.0"
+    "svelte": "^3.58.0",
+    "svelte-inview": "^4.0.0"
   },
   "dependencies": {
     "tailwindcss": "^3.0.24"
